# routes/index.js
@@ -2,6 +2,6 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/services', require('./services'));
-//router.use('/appointments', require('./appointments'));
+router.use('/appointments', require('./appointments'));
 
 module.exports = router;
